# common_ground_ontology

./: CG_actions.owl  CG_agents.owl  CG_area.owl  CG_building.owl  CG_capabilities.owl  CG_components.owl  CG_dishes.owl  CG_entities.owl  CG_env_interaction.owl  CG_food.owl  CG_kitchen.owl  CG_language.owl  CG_objects.owl  CG_restaurant.owl  CG_root.owl  CG_sensors.owl  CG_verbs.owl  CMakeLists.txt  PEPPER.owl  PR2.owl  TIAGO.owl  package.xml  pepper.owl  pr2.owl  ris_agents.owl  tiago.owl
meshes/furnitures/: adream_desk.dae  adream_desk_90.dae  ikea_shelf.mtl
meshes/humans/: remy.dae
